--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -17,6 +18,8 @@
     "@types/react-dom": "^18.0.10",
     "date-and-time": "^2.4.2",
     "dayjs": "^1.11.7",
+    "graphql-ws": "^5.11.3",
+    "http-proxy-middleware": "^2.0.6",
     "jotai": "^2.0.0",
     "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
