Set image port different from service port and update image repo
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/chart/mob-assist-ui/templates/deployment.yaml
+++ b/chart/mob-assist-ui/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
               name: default-config
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.image.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
