Remove deprecated set-output in action
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -52,13 +52,13 @@ jobs:
           fi
           
           echo "Release tag: ${RELEASE_TAG}"
-          echo "::set-output name=release-tag::$RELEASE_TAG"
+          echo "release-tag=$RELEASE_TAG" >> $GITHUB_OUTPUT
           
           echo "Release tag enabled: $RELEASE_TAG_ENABLED"
-          echo "::set-output name=release-tag-enabled::$RELEASE_TAG_ENABLED"
+          echo "release-tag-enabled=$RELEASE_TAG_ENABLED" >> $GITHUB_OUTPUT
           
           echo "Latest enabled: $LATEST_ENABLED"
-          echo "::set-output name=latest-enabled::$LATEST_ENABLED"
+          echo "latest-enabled=$LATEST_ENABLED" >> $GITHUB_OUTPUT
 
       - name: Docker CNTK meta
         id: cntk-meta
