Generate graphql url from current host and fix proxy config
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/chart/mob-assist-ui/templates/default-config-map.yaml
+++ b/chart/mob-assist-ui/templates/default-config-map.yaml
@@ -6,6 +6,9 @@ metadata:
     {{ include "mob-assist-ui.labels" . | nindent 4 }}
 data:
   proxy.conf: |
-    location /api {
+    location /graphql {
       proxy_pass {{ .Values.serverUrl }};
+    }
+    location /subscription {
+      proxy_pass {{ .Values.graphqlUrl }};
     }
