--- a/chart/mob-assist-ui/templates/route.yaml
+++ b/chart/mob-assist-ui/templates/route.yaml
@@ -12,4 +12,7 @@ spec:
     kind: Service
     name: {{ include "mob-assist-ui.fullname" . }}
     weight: 100
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
 {{- end }}
