--- a/chart/mob-assist-ui/templates/default-config-map.yaml
+++ b/chart/mob-assist-ui/templates/default-config-map.yaml
@@ -10,5 +10,9 @@ data:
       proxy_pass {{ .Values.serverUrl }};
     }
     location /subscription {
-      proxy_pass {{ .Values.graphqlUrl }};
+      proxy_pass {{ .Values.serverUrl }};
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_set_header Host $host;
     }
