--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,6 +48,7 @@ http {
         include /opt/app-root/etc/nginx.default.d/*.conf;
 
         location / {
+            try_files $uri /index.html;
         }
 
         error_page 404 /404.html;
