--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
