--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pact-foundation/pact": "^15.0.1",
     "@tanstack/query-core": "^5.74.4",
     "@tanstack/react-query": "^5.74.4",
+    "dayjs": "^1.11.13",
     "graphql-ws": "^6.0.4",
     "jotai": "^2.12.3",
     "jotai-tanstack-query": "^0.9.0",
