--- a/.github/workflows/asset-publish.yaml
+++ b/.github/workflows/asset-publish.yaml
@@ -9,6 +9,12 @@ jobs:
   publish-assets:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        chart_name:
+          - mob-assist-ui
+          - appid-binding
+
     steps:
       - name: Checkout release
         uses: actions/checkout@v4
@@ -29,7 +35,7 @@ jobs:
           RELEASE_TAG=${FULL_RELEASE_TAG/v/}
           
           REPO_NAME="mob-assist-api"
-          CHART_NAME="mob-assist-api"
+          CHART_NAME="${{ matrix.platform }}"
           CHART_PATH="release/chart/${CHART_NAME}"
           CHART_PACKAGE="${CHART_NAME}-${RELEASE_TAG}.tgz"
           PACKAGE_DIR="packages"
@@ -94,7 +100,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add index.yaml
-          git commit -m "Update helm repo with release ${{ steps.variables.outputs.release-tag }}"
+          git commit -m "Update helm repo with ${{ steps.variables.outputs.chart-name }} release ${{ steps.variables.outputs.release-tag }}"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
