Update helm chart
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/chart/mob-assist-ui/values.yaml
+++ b/chart/mob-assist-ui/values.yaml
@@ -86,3 +86,7 @@ serverUrl: "http://mob-assist-api"
 
 route:
   enabled: true
+
+appid-binding:
+  enabled: false
+  fullnameOverride: "appid-binding"
