--- a/chart/mob-assist-ui/Chart.yaml
+++ b/chart/mob-assist-ui/Chart.yaml
@@ -22,3 +22,9 @@ version: "0.8.2"
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.8.2"
+
+dependencies:
+  - name: appid-binding
+    version: 0.8.2
+    repository: "https://seansund.github.io/mob-assist-ui/"
+    condition: appid-binding.enabled
