--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mob-assist-ui",
-  ersion": "1.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
