Update helm cache handling
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/asset-publish.yaml
+++ b/.github/workflows/asset-publish.yaml
@@ -82,7 +82,7 @@ jobs:
       - name: Update helm cache
         run: |
           mkdir cache
-          ln -s ./pages/index.yaml ./cache/${{ steps.variables.outputs.repo-name }}-index.yaml
+          cp ./pages/index.yaml ./cache/${{ steps.variables.outputs.repo-name }}-index.yaml
 
       - name: Update helm dependencies
         run: |
