--- a/.github/workflows/asset-publish.yaml
+++ b/.github/workflows/asset-publish.yaml
@@ -9,25 +9,12 @@ jobs:
   publish-assets:
     runs-on: ubuntu-latest
 
-    strategy:
-      max-parallel: 1
-      matrix:
-        chart_name:
-          - appid-binding
-          - mob-assist-ui
-
     steps:
       - name: Checkout release
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.release.tag_name }}
           path: release
-
-      - name: Checkout gh-pages
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-          path: pages
 
       - name: Install helm
         uses: azure/setup-helm@v4
@@ -42,7 +29,7 @@ jobs:
           RELEASE_TAG=${FULL_RELEASE_TAG/v/}
           
           REPO_NAME="mob-assist-ui"
-          CHART_NAME="${{ matrix.chart_name }}"
+          CHART_NAME="mob-assist-ui"
           CHART_PATH="release/chart/${CHART_NAME}"
           CHART_PACKAGE="${CHART_NAME}-${RELEASE_TAG}.tgz"
           PACKAGE_DIR="packages"
@@ -79,18 +66,9 @@ jobs:
           echo "Repo name: ${REPO_NAME}"
           echo "repo-name=$REPO_NAME" >> $GITHUB_OUTPUT
 
-      - name: Update helm cache
-        run: |
-          mkdir cache
-          cp ./pages/index.yaml ./cache/${{ steps.variables.outputs.repo-name }}-index.yaml
-
       - name: Update helm dependencies
         run: |
-          helm repo add \
-            ${{ steps.variables.outputs.repo-name }} \
-            ${{ steps.variables.outputs.repo-base-url }} \
-            --repository-cache ./cache
-          helm dep update ${{ steps.variables.outputs.chart-path }} --repository-cache ./cache
+          helm dep update ${{ steps.variables.outputs.chart-path }}
 
       - name: Build helm package
         run: helm package ${{ steps.variables.outputs.chart-path }} -d ./${{ steps.variables.outputs.package-dir }}
@@ -111,6 +89,12 @@ jobs:
           helm repo index ${{ steps.variables.outputs.package-dir }} \
             --url ${{ steps.variables.outputs.asset-url }} \
             --merge ./index.current.yaml
+
+      - name: Checkout gh-pages
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+          path: pages
 
       - name: Update repo index
         run: |
