--- a/chart/mob-assist-ui/Chart.yaml
+++ b/chart/mob-assist-ui/Chart.yaml
@@ -25,6 +25,6 @@ appVersion: "1.0.7"
 
 dependencies:
   - name: appid-binding
-    version: "1.0.7"
-    repository: "https://seansund.github.io/mob-assist-ui/"
+    version: "1.0.0"
+    repository: "https://seansund.github.io/helm-charts/"
     condition: appid-binding.enabled
