Fix release workflow
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ jobs:
           TAG_NAME=$(echo "${{ steps.create-release.outputs.tag_name }}" | sed "s/v//g")
           cat chart/mob-assist-ui/Chart.yaml | \
             sed "s/appVersion:.*/appVersion: \"${TAG_NAME}\"/g" | \
-            sed "s/version:.*/version: \"${TAG_NAME}\"/g" \
+            sed "s/^version:.*/version: \"${TAG_NAME}\"/g" \
             > /tmp/Chart.yaml
           cp /tmp/Chart.yaml chart/mob-assist-ui/Chart.yaml
           
