--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jotai-tanstack-query": "^0.9.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
@@ -38,6 +39,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
+    "@types/raw-body": "^2.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.4.1",
