Add config map reference to deployment and clean up Dockerfile
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/chart/mob-assist-ui/templates/deployment.yaml
+++ b/chart/mob-assist-ui/templates/deployment.yaml
@@ -40,6 +40,8 @@ spec:
             - secretRef:
                 name: appid-binding
               prefix: APPID_
+            - configMapRef:
+                name: {{ include "mob-assist-ui.config-name" . }}
           ports:
             - name: http
               containerPort: {{ .Values.image.port }}
